<resources>
    <string name="app_name">ColorBlindTest</string>
    <string name="welc_msg">Color Blind Test</string>
    <string name="home_image_info">home image</string>
    <string name="home_start_button">Start</string>
    <string name="highest_score_text">High Score:%d</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>
    <string name="btnClear">Clear</string>
    <string name="btnSubmit">Submit</string>
    <string name="current_score">Current Score:%d</string>
    <string name="answer">Your Answer:</string>
    <string name="lose_image">lose image</string>
    <string name="lose_message">You Lose</string>
    <string name="win_image">win image</string>
    <string name="end_msg">This is End of the Test</string>
    <string name="score">Your Score:%d</string>
    <string name="HomeButton">Home</string>
    <string name="answer_correct_message">Correct!</string>
    <string name="answer_wrong_message">Incorrect!</string>
    <string name="answer_empty_message">Answer cant be empty!</string>
    <string name="exit_confirmation">Are you want to quit the test?</string>
    <string name="yes_btn">Yes</string>
    <string name="no_btn">No</string>
    <string name="username_placeholder">Type in username</string>
    <string name="home_login_button">Enter Username</string>
    <string name="username_empty">Username cant be empty.</string>
    <string name="false_answer_view">View False Answer</string>
    <string name="completion_time">Completion Time:</string>
    <string name="see_ranking">View Ranking</string>
    <string name="change_username">Change Username</string>
    <string name="score_zero">High Score:0</string>
    <string name="high_score">High Score:</string>
    <string name="question_num">Question:%d</string>
    <string name="warning_msg">Your score is below 15:Might having colorblind issue</string>
    <string name="clear_screen">Are you sure to clear all data?</string>
    <string name="confirm_msg">Confirm</string>
    <string name="cancel_msg">Cancel</string>
</resources>